--- a/style.css
+++ b/style.css
@@ -22,14 +22,31 @@ body{
     justify-content: center;
     align-items: center;
     text-align: center;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
 }
 .navbar{
     background-color: black;
+}
+.gallery{
+    margin-top: 25px;
 }
 .card {
     background-color: #111;
     color: white;
     border: none;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-
+.card:hover {
+    transform: translateY(-8px);
+    box-shadow: 0 10px 20px rgba(24, 23, 23, 0.5);
+}
+#tracklistCarousel .carousel-item img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  max-height: 70vh;
+}
+.carousel-caption h5 {
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+}
 
